# llm-webchat

./: .gitignore  AGENTS.md  LICENSE  README.md  publish.sh  pyproject.toml
.github/workflows/: ci.yml
docs/: architecture.md  extensions.md
extension_examples/conversation_search/: README.md  pyproject.toml
extension_examples/conversation_search/src/llm_webchat_search/: __init__.py
extension_examples/conversation_search/src/llm_webchat_search/static/: search.js
extension_examples/custom_notifications/: README.md
extension_examples/custom_notifications/src/llm_webchat_notifications/: __init__.py
extension_examples/custom_notifications/src/llm_webchat_notifications/static/: notifications.js
extension_examples/cyberpunk_style_override/: README.md  cyberpunk-loader.js  cyberpunk.css
extension_examples/markdown_export_with_react/: README.md
extension_examples/notifications/: README.md  pyproject.toml
extension_examples/notifications/src/llm_webchat_notifications/: __init__.py
extension_examples/notifications/src/llm_webchat_notifications/static/: notifications.js
extension_examples/react_component/: README.md  markdown-export.js
extension_examples/style_override/: README.md  cyberpunk.css
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: base-path.ts  hooks.ts  index.ts  llm-api.ts  markdown.ts  navigation.ts  slots.ts  style.css
frontend/src/components/: App.ts  ConversationSelector.ts  MessageInput.ts  MessageList.ts  ModelSelector.ts  NewConversation.ts  StreamingConnection.ts
frontend/src/models/: Conversation.ts  Model.ts  Response.ts  StreamingMessage.ts  Tool.ts
frontend/src/views/: App.ts  ConversationSelector.ts  EmptySlot.ts  MessageInput.ts  MessageList.ts  ModelSelector.ts  NewConversation.ts  Sidebar.ts  Spinner.ts  ToolSelector.ts
src/llm_webchat/: __init__.py  config.py  database.py  event_queues.py  events.py  hookspecs.py  models.py  plugins.py  server.py
tests/: conftest.py  helpers.py  test_api.py  test_database.py  test_event_queues.py  test_hookspecs.py  test_lint_and_format.py
ui-audit/: AUDIT_REPORT.md  mock-a-clean-utility.html  mock-b-compact-dense.html  mock-c-warm-minimal.html  mock-c1-floating-input.html  mock-c2-open-bottom.html  mock-c3-lifted-composer.html  mock-d-dark-workspace.html  mock-e-flat-brutalist.html  mock-f-sidebarless-panel.html
