[project]
name = "llm-webchat"
version = "0.1.0"
description = "A web chat interface plugin for llm"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
dependencies = [
    "llm>=0.28",
    "fastapi>=0.115",
    "starlette>=0.45",
    "uvicorn>=0.34",
    "pluggy>=1.5",
]

[project.entry-points.llm]
webchat = "llm_webchat"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/llm_webchat"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[dependency-groups]
dev = [
    "pytest>=8.3",
]
