[project]
name = "llm-webchat"
version = "1.0.0"
description = "A web chat interface plugin for llm"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
dependencies = [
    "llm>=0.28",
    "fastapi>=0.115",
    "starlette>=0.45",
    "uvicorn>=0.34",
    "pluggy>=1.5",
    "pydantic-settings>=2.13.1",
    "sqlite-utils>=3.39",
]

[project.scripts]
llm-webchat = "llm_webchat:main"

[project.entry-points.llm]
webchat = "llm_webchat"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/llm_webchat"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 119

[tool.ruff.format]
docstring-code-line-length = 119
quote-style = "double"
indent-style = "space"

[tool.ruff.lint.isort]
force-single-line = true
case-sensitive = true
order-by-type = false
known-first-party = [
    "latchkey",
]

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[dependency-groups]
dev = [
    "pytest>=8.3",
    "ruff>=0.9",
]
