[project]
name = "llm-webchat-notifications"
version = "0.1.0"
description = "Notification badges for llm-webchat when background conversations complete"
requires-python = ">=3.10"
license = { text = "MIT" }
dependencies = [
    "llm-webchat",
]

[project.entry-points.llm]
webchat-notifications = "llm_webchat_notifications"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/llm_webchat_notifications"]
